[package]
name = "hutton-rust"
version = "0.1.1"
authors = ["GirkovArpa <GirkovArpa@protonmail.com>"]
edition = "2018"
description = "The Hutton cipher implemented as a Rust crate"
readme = "README.md"
repository = "https://github.com/GirkovArpa/hutton-rust"
license = "Unlicense"
license-file = "LICENSE"
keywords = ["hutton", "cipher", "encryption", "code"]
categories = ["algorithms"]